@@ -3,10 +3,9 @@ package es.readtoowell.api_biblioteca.service.library;
 import es.readtoowell.api_biblioteca.mapper.GenreMapper;
 import es.readtoowell.api_biblioteca.mapper.GoalMapper;
 import es.readtoowell.api_biblioteca.mapper.UserLibraryBookMapper;
-import es.readtoowell.api_biblioteca.model.DTO.GoalDTO;
-import es.readtoowell.api_biblioteca.model.DTO.SimpleBookDTO;
-import es.readtoowell.api_biblioteca.model.DTO.UserLibraryBookDTO;
-import es.readtoowell.api_biblioteca.model.DTO.YearRecapDTO;
+import es.readtoowell.api_biblioteca.model.DTO.*;
+import es.readtoowell.api_biblioteca.model.DTO.book.RatingDTO;
+import es.readtoowell.api_biblioteca.model.DTO.book.SimpleBookDTO;
 import es.readtoowell.api_biblioteca.model.entity.*;
 import es.readtoowell.api_biblioteca.model.entity.id.UserLibraryBookId;
 import es.readtoowell.api_biblioteca.model.enums.ReadingStatus;
@@ -20,10 +19,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.sql.Date;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -75,7 +76,15 @@ public class UserLibraryBookService {
             throw new ValidationException("El estado de lectura indicado es inválido.");
         }
 
-        Pageable pageable = PageRequest.of(page, size);
+        Pageable pageable;
+        if (status == ReadingStatus.READ.getValue()) {
+            pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "dateFinish"));
+        } else if (status == ReadingStatus.PENDING.getValue()) {
+            pageable = PageRequest.of(page, size);
+        } else {
+            pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.ASC, "dateStart"));
+        }
+
         Page<UserLibraryBook> libros = libraryRepository.findByUserAndReadingStatus(user, status, pageable);
 
         return libros.map(libraryMapper::toDTO);
@@ -143,7 +152,7 @@ public class UserLibraryBookService {
      * @return DTO con los datos del libro actualizado
      * @throws ValidationException La calificación es inválida
      */
-    public UserLibraryBookDTO rateBook(Long idBook, User user, double calificacion) {
+    public RatingDTO rateBook(Long idBook, User user, double calificacion) {
         if (calificacion < 0.5 || calificacion > 5 || calificacion % 0.5 != 0) { // Comprobar que la nota sea válida
             throw new ValidationException("La calificación debe estar entre 0.5 y 5, en incrementos de 0.5.");
         }
@@ -160,10 +169,18 @@ public class UserLibraryBookService {
 
         libro.setRating(calificacion);
         libro.setReadingStatus(ReadingStatus.READ.getValue());
+        libro.setDateStart(Date.valueOf(LocalDate.now()));
+        libro.setDateFinish(Date.valueOf(LocalDate.now()));
+
+        goalService.updateGoals(user.getId(), 0);
 
         libro = libraryRepository.save(libro);
 
-        return libraryMapper.toDTO(libro);
+        RatingDTO ratedBook = new RatingDTO();
+        ratedBook.setLibraryBook(libraryMapper.toDTO(libro));
+        ratedBook.setAverageRating(libraryRepository.findAverageRatingByBookId(idBook));
+
+        return ratedBook;
     }
 
     /**
@@ -223,8 +240,11 @@ public class UserLibraryBookService {
 
         if (status == ReadingStatus.READING.getValue()) {
             libro.setDateStart(Date.valueOf(LocalDate.now())); // Si pasa a "Leyendo", actualizar fecha inicio
-        } else if (status == ReadingStatus.READ.getValue() && lastStatus == ReadingStatus.READING.getValue()) {
-            libro.setDateFinish(Date.valueOf(LocalDate.now())); // Si pasa de "Leyendo" a "Leído", actualizar fecha fin
+        } else if (status == ReadingStatus.READ.getValue()) {
+            libro.setDateFinish(Date.valueOf(LocalDate.now())); // Si pasa a "Leído", actualizar fecha fin
+            if (libro.getDateStart() == null) {
+                libro.setDateStart(Date.valueOf(LocalDate.now()));
+            }
             goalService.updateGoals(user.getId(), 0);
         } else if (status == ReadingStatus.PENDING.getValue() && (lastStatus == ReadingStatus.PAUSED.getValue()
                     || lastStatus == ReadingStatus.ABANDONED.getValue())) {
@@ -266,11 +286,14 @@ public class UserLibraryBookService {
             throw new IllegalStateException("No se puede actualizar el progreso de un libro que no esté en 'Leyendo'");
         }
 
+        int anteriorProgreso = libro.getProgress();
+        String anteriorTipoProgreso = libro.getProgressType();
+
         int progresoTotal = progreso;
         if (tipoProgreso.equals("porcentaje") && progreso >= 100) {
             progresoTotal = 100;
             libro.setReadingStatus(ReadingStatus.READ.getValue());
-            libro.setDateStart(Date.valueOf(LocalDate.now()));
+            libro.setDateFinish(Date.valueOf(LocalDate.now()));
 
         } else if (tipoProgreso.equals("paginas") && progreso >= book.getPageNumber()) {
             progresoTotal = book.getPageNumber();
@@ -284,12 +307,17 @@ public class UserLibraryBookService {
         libro = libraryRepository.save(libro);
 
         // Actualizar los objetivos en curso con las páginas correspondientes
-        if (tipoProgreso.equals("porcentaje")) {
-            int paginasLeidas = (int) Math.round((progresoTotal / 100.0) * book.getPageNumber());
-            goalService.updateGoals(user.getId(), paginasLeidas);
-        } else if (tipoProgreso.equals("paginas")) {
-            goalService.updateGoals(user.getId(), progresoTotal);
+        if (tipoProgreso.equals(anteriorTipoProgreso)) { // Si es el mismo tipo de progreso, restar
+            progresoTotal -= anteriorProgreso;
+        } else if (tipoProgreso.equals("porcentaje")) { // Si antes eran páginas y ahora porcentaje:
+            int paginasAhora = (int) Math.floor((progresoTotal / 100.0) * book.getPageNumber());
+            progresoTotal = paginasAhora - anteriorProgreso;
+        } else { // Si antes era porcentaje y ahora son páginas:
+            int paginasAntes = (int) Math.floor((anteriorProgreso / 100.0) * book.getPageNumber());
+            progresoTotal -= paginasAntes;
         }
+
+        goalService.updateGoals(user.getId(), progresoTotal);
 
         return libraryMapper.toDTO(libro);
     }
@@ -303,15 +331,26 @@ public class UserLibraryBookService {
     public YearRecapDTO getYearRecap(User user) {
         YearRecapDTO recap = new YearRecapDTO();
 
-        // Objetivos en curso, en caso de que el usuario los tenga
-        List<GoalDTO> goalsDTO = goalRepository.findAnnualGoalsForCurrentYear(user.getId())
-                .stream().map(goalMapper::toDTO).collect(Collectors.toList());
+        // Objetivos completados en el año actual
+        List<GoalDTO> goalsDTO = new ArrayList<>(goalService.getFinishedGoalsActualYear(user.getId()));
+        // Se añaden también los objetivos anuales del año anterior
+        List<GoalDTO> lastYearAnnualGoalsDtos = goalRepository.findAnnualGoalsByYear(user.getId(),
+                        LocalDate.now().getYear() -1)
+                .stream()
+                .filter(goal -> goal.getCurrentAmount() >= goal.getAmount()) // Solo los que están completados
+                .map(goalMapper::toDTO)
+                .toList();
+        if (!lastYearAnnualGoalsDtos.isEmpty()) {
+            goalsDTO.addAll(lastYearAnnualGoalsDtos);
+        }
         recap.setAnnualGoals(goalsDTO);
 
-        // Total de libros y de páginas leídas
+        // Total de libros leídos
         long numBooks = libraryRepository.findBooksReadActualYear(user.getId()).size();
-        long numPages = libraryRepository.sumPagesReadInCurrentYear(user.getId());
         recap.setTotalBooksRead(numBooks);
+
+        // Total de páginas leídas
+        long numPages = libraryRepository.sumPagesReadInCurrentYear(user.getId());
         recap.setTotalPagesRead(numPages);
 
         // Géneros más leídos (5) y libros mejor valorados (4)
